@@ -32,44 +32,44 @@ of the document.
 
     General options for the program
     
-+==================+===========================+===================================================+
-| Short            | Long                      | Description                                       |
-+==================+===========================+===================================================+
-| ``-C``           | ``--clear-cache``         | purge the cache and exit                          |
-| ``-N``           | ``--no-network``          | don't use the network to resolve references       |
-| ``-n``           | ``--no-rng``              | don't check against the RNG schema                |
-| ``-q``           | ``--quiet``               | don't print anything                              |
-|                  | ``--save-config``         | save configuration back to config file            |
-| ``-v``           | ``--verbose``             | print extra information                           |
-| ``-V``           | ``--version``             | display the version number and exit               |
-| ``-X``           | ``--no-xinclude``         | don't resolve xi:include elements                 |
+ ================== =========================== =================================================== 
+  Short              Long                        Description                                        
+ ================== =========================== =================================================== 
+  ``-C``             ``--clear-cache``           purge the cache and exit                           
+  ``-N``             ``--no-network``            don't use the network to resolve references        
+  ``-n``             ``--no-rng``                don't check against the RNG schema                 
+  ``-q``             ``--quiet``                 don't print anything                               
+  .                  ``--save-config``           save configuration back to config file             
+  ``-v``             ``--verbose``               print extra information                            
+  ``-V``             ``--version``               display the version number and exit                
+  ``-X``             ``--no-xinclude``           don't resolve xi:include elements                  
  
-| ``-c DIRECTORY`` | ``--cache=DIRECTORY``     | specify the primary cache directory to write to   |
-|                  | ``--configfile=FILENAME`` | specify the configuration file to use             |
-| ``-o FILENAME``  | ``--out=FILENAME``        | specify an output filename                        |
-| ``-r RNG``       | ``--rng=RNG``             | specify an alternate RNG file                     |
-|                  | ``--extract=TYPE``        | extract all source code for the given type        |
-+==================+===========================+===================================================+
+  ``-c DIRECTORY``   ``--cache=DIRECTORY``       specify the primary cache directory to write to    
+  .                  ``--configfile=FILENAME``   specify the configuration file to use              
+  ``-o FILENAME``    ``--out=FILENAME``          specify an output filename                         
+  ``-r RNG``         ``--rng=RNG``               specify an alternate RNG file                      
+  .                  ``--extract=TYPE``          extract all source code for the given type         
+ ================== =========================== =================================================== 
 
     
 **Spelling Options**
 
     The following options affect how the spell checking is performed.
     
-   +=================+==============================+===================================================+
-   | Short           | Long                         | Description                                       |
-   +=================+==============================+===================================================+
-   |                 | ``--no-dup-detection``       | don't perform duplicate detection                 |
-   |                 | ``--no-spell``               | don't perform spell checking on the source        |
-   |                 | ``--no-suggest``             | don't provide suggestions for misspelled words    |
-   |                 | ``--no-spell``               | provide suggestions for misspelled words (default)|
+    ================= ============================== =================================================== 
+     Short             Long                           Description                                        
+    ================= ============================== =================================================== 
+    .                  ``--no-dup-detection``         don't perform duplicate detection                  
+    .                  ``--no-spell``                 don't perform spell checking on the source         
+    .                  ``--no-suggest``               don't provide suggestions for misspelled words     
+    .                  ``--no-spell``                 provide suggestions for misspelled words (default) 
     		     
-   |                 | ``--color=TEXT``             | specify the color to use for word highlighting    |
-   |                 | ``--dictionary=FILENAME``    | specify an additional dictionary to use           |
-   |                 | ``--personal=FILENAME``      | specify the personal dictionary to use            |
-   |                 | ``--spell-program=FILENAME`` | program to use for spell checking                 |
-   |                 | ``--spell-window=NUM``       | how many words to display as part of the context  |
-   +=================+==============================+===================================================+
+    .                  ``--color=TEXT``               specify the color to use for word highlighting     
+    .                  ``--dictionary=FILENAME``      specify an additional dictionary to use            
+    .                  ``--personal=FILENAME``        specify the personal dictionary to use             
+    .                  ``--spell-program=FILENAME``   program to use for spell checking                  
+    .                  ``--spell-window=NUM``         how many words to display as part of the context   
+    ================= ============================== =================================================== 
 
     It is assumed that the spell checking program is aspell and that aspell is on the path.
     For Windows systems, it additionally look in "C:\\Program Files (x86)\\Aspell\\bin" for the program.
@@ -86,14 +86,14 @@ of the document.
     
 **ABNF Checking Options**
     
-   +================+=============================+===================================================+
-   | Short          | Long                        | Description                                       |
-   +================+=============================+===================================================+
-   |                | ``--no-abnf``               | don't perform abnf checking on the source         |
+    ================ ============================= =================================================== 
+     Short            Long                          Description                                        
+    ================ ============================= =================================================== 
+    .                 ``--no-abnf``                 don't perform abnf checking on the source          
 
-   |                | ``--abnf-add-rules``        | ABNF file to include when checking                |
-   |                | ``--abnf-program=FILENAME`` | specify program to use for ABNF checking          |
-   +================+=============================+===================================================+
+    .                 ``--abnf-add-rules``          ABNF file to include when checking                 
+    .                 ``--abnf-program=FILENAME``   specify program to use for ABNF checking           
+    ================ ============================= =================================================== 
 
 Configuration File
 ==================
@@ -117,6 +117,14 @@ The format of the configuration file is the standard INI file format.
 
    * program - name of the ABNF program to use - defaults to bap provided w/ rfclint (bap is only installed for systems identified as nt, darwin or linux*)
    * addRules - name of file to be processed along with rules in the source
+
+Windows and Curses
+==================
+
+The version of python that ships on windows does not include a copy of the curses module as part of it.
+If interactive spell checking or duplicate detection is desired on a windows system then a curses module will need to be installed independent of this package.
+One place to locate a curses Python extension an be found at https://www.lfd.uci.edu/~gohlke/pythonlibs/.
+If no curses library is detected, rfclint will automatically turn on the --no-curses option.
     
 Dependencies
 ============
