@@ -1,2 +1,2 @@
-__version__  = '0.5.4'
+__version__  = '0.5.5'
 NAME = 'svgcheck'
