@@ -1,3 +1,9 @@
+rfctools-common (0.5.5) distribution(s); urgency=low
+
+	* Correct problem with displaying utf8 strings
+
+-- Jim Schaad <ietf@augustcellars.com>  Tue 12 JUNE 2018 12:00:00 -0700
+
 rfctools-common (0.5.3) distribution(s); urgency=low
 
 	* Copy the cache code in for URLs on .dtd and .ent files, this allows for
