@@ -1,3 +1,9 @@
+xmldiff (0.5.5) distribution(s); urgency=low
+
+	* Update readme file
+
+-- Jim Schaad <ietf@augustcellars.com>  Tue 11 June 2018 12:00:00 -0800
+
 xmldiff (0.5.4.1) distribution(s); urgency=low
 
 	* Correct path to the build files for C code
