@@ -1,3 +1,11 @@
+rfclint (0.5.5) distribution(s); urgency=low
+
+	* Separate duplicate detection from spell checking
+	* Implement interactive duplicate detection both with and without curses
+	* Implement interactive spell checking both with and without curses
+
+-- Jim Schaad <ietf@augustcellars.com>  Tue 11 Jan 2018 12:00:00 -0700
+
 rfclint (0.5.3) distribution(s); urgency=low
 
 	* Display platform name when bap is not installed.
